@@ -9,29 +9,33 @@ set(OPENMP 0 BOOL "Openmp use")
 # For which compilers we shall search (if none found then the 
 # default cmake compiler detection will be invoked. 
 
-# Search for C compilers in the specified order.  That will determine
-#  the rest.
-#	find_program(THE_C NAMES icc gcc-mp-4.9 gcc-mp-4.8 gcc-mp-4.6 gcc46 gcc45 gcc44 gcc43 gcc)
-	find_program(THE_C NAMES gcc gcc-mp-4.9 gcc-mp-4.8 gcc-mp-4.6 gcc46 gcc45 gcc44 gcc43 icc)
+# Search for C compilers in the specified order. That will determine
+# the rest.
+	find_program(THE_C NAMES gcc gcc-mp-4.9 gcc-mp-4.8 gcc-mp-4.6 gcc46 gcc45 gcc44 gcc43 icc clang)
 #
 	if( ${THE_C} MATCHES "gcc.*" )
 		string(REPLACE "gcc" "g++" C_XX ${THE_C} )
 		string(REPLACE "gcc" "gfortran" F_C ${THE_C} )
 
 ## for a version of cmake < 2.8 add standard libs for gcc, because
-##   they are not automatically added.
+## they are not automatically added.
 		if( ${CMAKE_VERSION} VERSION_LESS 2.8)
 	           set(ADD_STDLIBS "m" "gfortran")
 		else(${CMAKE_VERSION} VERSION_LESS 2.8)
 		   set(ADD_STDLIBS "" CACHE STRING "not adding standard libraries ")
 		endif(${CMAKE_VERSION} VERSION_LESS 2.8)
 
-       	elseif( ${THE_C} MATCHES "icc" )                    
+    elseif( ${THE_C} MATCHES "icc" )                    
 		set(C_XX "icpc")
 		set(F_C "ifort")
+
+    elseif( ${THE_C} MATCHES "clang" )
+		set(C_XX "clang++")
+		set(F_C "0")
+
 	else()       
  		set(THE_C "0")	      
-       	endif( ${THE_C} MATCHES "gcc.*" ) 
+    endif( ${THE_C} MATCHES "gcc.*" ) 
 #
 	if(  THE_C AND C_XX AND F_C )
 	     find_program(THE_CXX ${C_XX} )
@@ -39,7 +43,7 @@ set(OPENMP 0 BOOL "Openmp use")
 	     if( THE_F AND THE_CXX ) 
 	     	 set(CMAKE_C_COMPILER ${THE_C} CACHE INTERNAL   "the C   compiler" FORCE) 
 	    	 set(CMAKE_CXX_COMPILER ${THE_CXX} CACHE INTERNAL   "the C++ compiler" FORCE)
-		 set(CMAKE_Fortran_COMPILER ${THE_F} CACHE INTERNAL    "the F compiler" FORCE)
+             set(CMAKE_Fortran_COMPILER ${THE_F} CACHE INTERNAL    "the F compiler" FORCE)
 	     endif( THE_F AND THE_CXX ) 
 	endif(  THE_C AND C_XX AND F_C )
 # END COMPILERS SET UP................ 
