@@ -36,6 +36,7 @@ Structure
 [ 1.1.6 ] add uniform I/O routines: Binary and ASCII
 [ 1.4.2 ] add command line options
 [ 1.4.3 ] set DEBUG_MODE in Makefile instead of the header file
+[       ] allow users to set compilers, e.g. using CC, CXX (Chensong)
 [       ] make several functions 'standalone', e.g. use PCG alone (Chensong)
 
 ========================
